tests/parser-test-files/bad-files/define-instance.7.error
error: Malformed instance definition
  --> test:4:17
   |
 4 |  (define-instance)
   |                  ^ expected an instance head
